<resources>
    <string name="app_name">PineNenas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="already_have_account_login">Already have account login</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_mismatch">Invalid Password</string>
    <string name="invalid_display_name">Invalid Display Name</string>
    <string name="menu_register">Register</string>
    <string name="dont_have_account_register">Register</string>
    <string name="menu_profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact Number</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_description">Shop Description</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_for_a_location">Search for a Location</string>
    <string name="confirm_this_location">Confirm This Location</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="image_of_product">Image of product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price_rm">Price (RM)</string>
    <string name="quantity">Quantity</string>
    <string name="view_shop">View Shop</string>
    <string name="view_shop_on_map">View Shop on Map</string>
    <string name="menu_my_products">My Products</string>
    <string name="menu_my_shop">My Shop</string>
    <string name="menu_marketplace">Marketplace</string>
    <string name="facebook">Facebook</string>
    <string name="tiktok">TikTok</string>
    <string name="instagram">Instagram</string>
    <string name="view_farm_on_map">View Farm on Map</string>
    <string name="pin_shop_location_on_map">Pin Shop Location on Map</string>
    <string name="no_location_selected">No location selected</string>
    <string name="pin_farm_location">Pin Farm Location</string>
    <string name="no_farm_location_selected">No farm location selected</string>
    <string name="social_media_optional">Social Media (Optional)</string>
    <string name="instagram_profile_url">Instagram Profile URL</string>
    <string name="facebook_profile_url">Facebook Profile URL</string>
    <string name="tiktok_profile_url">TikTok Profile URL</string>
</resources>