<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_menu_announcement"
            android:title="@string/menu_announcement" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_marketplace"
            android:icon="@drawable/ic_menu_marketplace"
            android:title="@string/menu_marketplace" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_menu_store"
            android:title="@string/menu_my_products" />
    </group>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>