<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pinenenas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_announcement"
        android:name="com.example.pinenenas.ui.announcement.AnnouncementFragment"
        android:label="@string/menu_announcement"
        tools:layout="@layout/fragment_announcement">
        <action
            android:id="@+id/action_nav_announcement_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.pinenenas.ui.userprofile.UserProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            app:argType="long" />
        <action
            android:id="@+id/action_userProfileFragment_to_myShopFragment"
            app:destination="@id/myShopFragment" />
    </fragment>

    <fragment
        android:id = "@+id/nav_schedule"
        android:name = "com.example.pinenenas.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pinenenas.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_my_products"
        android:name="com.example.pinenenas.ui.myproducts.MyProductsFragment"
        android:label="@string/menu_my_products"
        tools:layout="@layout/fragment_my_products" />
    <fragment
        android:id="@+id/myShopFragment"
        android:name="com.example.pinenenas.ui.myshop.MyShopFragment"
        android:label="{shopName}"
        tools:layout="@layout/fragment_my_shop" >
        <argument
            android:name="userId"
            app:argType="long" />
        <argument
            android:name="shopName"
            app:argType="string"
            android:defaultValue="Shop" />
    </fragment>
    <fragment
        android:id="@+id/nav_marketplace"
        android:name="com.example.pinenenas.ui.marketplace.MarketplaceFragment"
        android:label="@string/menu_marketplace"
        tools:layout="@layout/fragment_marketplace" >
        <action
            android:id="@+id/action_nav_marketplace_to_myShopFragment"
            app:destination="@id/myShopFragment" />
    </fragment>

</navigation>