<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainerLowest"
    tools:context=".ui.profile.ProfileFragment"
    tools:theme="@style/Theme.Material3.DayNight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Card for Personal and Shop Details -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Personal Details -->
                <TextView
                    android:id="@+id/label_personal_details"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_details"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <!-- Name -->
                <TextView
                    android:id="@+id/text_full_name"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/ic_person"
                    tools:text="John Doe" />

                <!-- Age & Contact -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_age"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="8dp"
                        app:drawableStartCompat="@drawable/ic_cake"
                        tools:text="35 years old" />

                    <TextView
                        android:id="@+id/text_contact_number"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="8dp"
                        app:drawableStartCompat="@drawable/ic_phone"
                        tools:text="012-3456789" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp" />

                <!-- Shop Details -->
                <TextView
                    android:id="@+id/text_shop_name"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    tools:text="The Pineapple Stand" />

                <TextView
                    android:id="@+id/text_shop_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.1"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="Selling the freshest and sweetest pineapples in town." />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card for Actions and Social Media -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- Social Media -->
                <LinearLayout
                    android:id="@+id/layout_social_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/button_instagram"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/instagram"
                        android:src="@mipmap/ic_instagram"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageButton
                        android:id="@+id/button_facebook"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/facebook"
                        android:src="@mipmap/ic_facebook"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageButton
                        android:id="@+id/button_tiktok"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/tiktok"
                        android:src="@mipmap/ic_tiktok"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

                <!-- This inner ConstraintLayout solves the button width warning -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/button_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_social_media"
                    app:layout_constraintWidth_max="320dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_view_shop_on_map"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/view_shop_on_map"
                        android:visibility="gone"
                        app:icon="@drawable/ic_menu_store"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_view_farm_on_map"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/view_farm_on_map"
                        android:visibility="gone"
                        app:icon="@drawable/ic_map"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/button_view_shop_on_map"
                        tools:visibility="visible" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_view_shop"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/view_shop"
                        android:visibility="gone"
                        app:icon="@drawable/ic_menu_store"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/button_view_farm_on_map"
                        tools:visibility="visible" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
